--- a/manifest.yaml
+++ b/manifest.yaml
@@ -61,7 +61,10 @@ spec:
     canary:
       canaryService: canary-demo-preview
       steps:
-        - setWeight: 50
+        - setWeight: 20
+        - pause:
+            duration: 5
+        - setWeight: 80
         - pause:
             duration: 5
   template:
